compiler/weave_syntax/tests/data/syntax/declarations/constraint-0001.error
error: Unexpected tokens
        --> <source>:58:9
         |
      58 |         requires    (   t > 0       )
         |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      59 |         requires    (   t < 100     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      60 |         ensures     (   u > 21      )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      61 |         ensures     (   v < 37      )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      62 |         ensures     (   return  r   :   r > 0           )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      63 |         ensures     (                   v == old(v)     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      64 |         invariant   (                   v >= 10         )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:67:5
         |
      67 |     assert(t > 0);
         |     ^^^^^^^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:72:9
         |
      72 | call(x, _);
         |         ^
error: Unexpected tokens
        --> <source>:72:9
         |
      72 | call(x, _);
         |         ^
error: Expected '[token:identifier]'
        --> <source>:80:45
         |
      80 |     where (U: Concept4, Concept5,           )   // allow trailing comma
         |                                             ^
error: Unexpected tokens
        --> <source>:83:5
         |
      83 |     requires    debug       (   t > 0       )
         |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      84 |     requires    debug       (   t < 100     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      85 | 
         | 
     ... |
     251 | 
         | 
     252 |     return c;
         | ^^^^^^^^^^^^^
     253 | }
         | ^
